# csmsum.github.io

./: 404.html  FAQ.md  README.md  _config.yml  feed.xml  index.html  mkdocs.yml  package-lock.json  package.json  pyproject.toml  sitemap.xml
_latexhowto/: index.html
_news/: announcement_1.md  announcement_3.md
_pages/: about.md  about_einstein.md
_pages/.obsidian/: workspace.json
_pages/dropdown/: index.html
_posts/: 2024-10-06-kernel-method.md  2024-11-04-Variational-Inference.md
_posts/.obsidian/: workspace.json
about/: index.html
assets/css/: bootstrap.min.css
assets/json/: resume.json
assets/jupyter/: blog.ipynb.html
blog/: index.html
blog/2024/: index.html
blog/2024/2024-11-04-Variational-Inference/: index.html
blog/2024/Variational-Inference/: index.html
blog/2024/kernel-method/: index.html
blog/category/inference/: index.html
blog/category/kernel/: index.html
blog/category/method/: index.html
blog/category/variational/: index.html
blog/tag/inference/: index.html
blog/tag/kernel/: index.html
blog/tag/method/: index.html
blog/tag/variational/: index.html
cv/: CV.aux  CV.fls  CV.out  index.html
docs/: _latexhowto.md  about.md  index.md
docs/cv/: CV.fdb_latexmk  CV.tex
docs/research/ci/: ci.md
news/: index.html
news/announcement_1/: index.html
news/announcement_2/: index.html
news/announcement_3/: index.html
people/: index.html
projects/: index.html
publications/: index.html
site/: index.html  objects.inv
site/cv/: CV.blg
site/search/: search_index.json
teaching/: index.html
(+6 files in other folders)
