[project]
name = "csmsum"
version = "0.1.0"
description = "csmsum webpage management"
authors = [
    {name = "Seungmin Chou",email = "csmwstat@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mkdocs-material (>=9.6.11,<10.0.0)",
    "mkdocstrings[python] (>=0.29.1,<0.30.0)",
    "pymdown-extensions (>=10.14.3,<11.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
